# nebulanews-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/core_api/: models.py
src/core_api/migrations/: 0001_initial.py  0002_alter_newsarticle_subcategory.py
src/main/: asgi.py  settings.py  urls.py  wsgi.py
src/main/management/commands/: import_mind_interaction.py  import_mind_news.py  import_news.py
src/management/: models.py
src/management/migrations/: 0001_initial.py
