[tool.poetry]
name = "nebulanews-api"
version = "0.1.0"
description = ""
authors = ["joseabautista <jose_antonio_bautista_recio@external.mckinsey.com>"]
readme = "README.md"
packages = [{include = "nebulanews_api"}]

[tool.poetry.dependencies]
python = "~3.10"
django = "^4.2.2"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.6"
pandas = "^2.0.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
